Fixed the bug where notifications on reload was not highlighted on sidebar. Updated tailwind config to look at the classes instead of the default user prefers dark mode. Updated the form on the login component to keep the container as wide as the rest of the elements. Fixed height of pop up modal when user logs in or signs up. Fixed the image issues on the user profile

--- a/src/css-components/templates/popup-modal.css
+++ b/src/css-components/templates/popup-modal.css
@@ -5,6 +5,7 @@
   width: 30vw;
   max-width: 500px;
   min-width: 470px;
+  max-height: 700px;
   align-items: center;
   justify-content: center;
   height: 90vh;
